edifact-edi/2.7/modules/ROOT/pages/edifact-edi-connector-reference.adoc
= EDIFACT EDI Connector 2.7 Reference - Mule 4
:page-aliases: connectors::edifact/edifact-edi-connector-reference.adoc

== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | ID used to reference this configuration. | |x
| Expiration Policy | ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances when appropriate. |  |
| Mule interchange ID | String a|  Identification for Mule in the exchange (UNB segment). This value is used in combination with the value of the *Mule ID qualifier* field, and if one field is set, the other must also be set. 
{sp}+
{sp}+
If set, this value affects both send and receive message handling:

* On the receive side, the UNB interchange recipient identification must match this value.
* On the send side, the connector uses this value as the UNB interchange sender identification unless it is overridden in the message parameters. |  |
| Mule ID qualifier | String a|  Identification qualifier for Mule in the exchange (UNB segment). This value is used in combination with the value of the *Mule interchange ID* field, and if one field is set, the other must also be set. 
{sp}+
{sp}+
If set, this value affects both send and receive message handling:

*  On the receive side, the UNB interchange recipient identification code qualifier must match this value. 
* On the send side, the connector uses this value as the UNB interchange sender identification code qualifier unless it is overridden in either the send configuration or the message parameters. |  |
| Partner interchange ID | String a|  Identification for the partner in the exchange (UNB segment). This value is used in combination with the value of the *Partner ID qualifier* field, and if one field is set, the other must also be set. 
{sp}+
{sp}+
If set, this value affects both send and receive message handling:

 * On the receive side, the UNB interchange sender identification must match this value. 
 * On the send side, the connector uses this value as the UNB interchange recipient identification code unless it is overridden in either the send configuration or the message parameters. |  |
| Partner ID qualifier | String a|  Identification qualifier for the partner in the exchange (UNB segment). This value is used in combination with the value of the *Partner Interchange ID* field, and if one field is set, the other must also be set. 
{sp}+
{sp}+
If set, this value affects both send and receive message handling.

* On the receive side, the UNB interchange sender identification code qualifier must match this value. 
* On the send side, the connector uses this value as the UNB interchange recipient identification code qualifier unless it is overridden in either the send configuration or the message parameters. |  |
| Schema definitions | Array of String |  List of schema file system paths or class paths for the module to use. |  |x
| Substitution character | String |  Substitution character used to replace invalid characters in string values when using syntax level `UNOA` or `UNOB`. The use of this substitution character, if set, is controlled by separate parser and writer flags. |  |
| Separators usage a| Enumeration, one of:

* USE_DEFAULTS
* USE_SPECIFIED_FOR_WRITES
* USE_SPECIFIED_FOR_ALL a|  Defines how specified separator and release characters are used:

* USE_DEFAULTS
+
Use defaults as defined by EDIFACT syntax version standards.
+
* USE_SPECIFIED_FOR_WRITES
+
Use standard default delimiters for reads and specified delimiters as defaults for writes.
+
* USE_SPECIFIED_FOR_ALL
+
Use specified delimiters as the defaults for both reads and writes. |  USE_SPECIFIED_FOR_ALL |
| Data element separator | String |  Default data element separator character. |  + |
| Component element separator | String |  Component element separator character. |  : |
| Repetition separator | String |  Repetition separator character. |  * |
| Segment terminator | String |  Segment terminator character. |  ' |
| Release character | String |  Release character. |  ? |
| Timezone offset| String | Time zone offset from the UTC to apply to the date and time elements in the Interchange Header (UNB) segment. This field accepts only values compliant with ISO 8601 (which are UTC-based), for example, `-01:00`, `+0100`, `-0130`, and so on.
{sp}+
{sp}+
If you don't specify a value for this field, the Interchange Header segment date and times are set to the local time of the Mule runtime. | |
| Enforce length limits | Boolean a|  Enforce minimum and maximum lengths for receive values: 

* true
+
The connector rejects messages with values that are too long or too short.
+
* false
+
The connector uses the values and does not reject the messages. 

In either case, the error is logged and reported in CONTRL functional acknowledgments. |  true |
| Enforce value repeats | Boolean a|  Enforce repetition count limits for receive values:

* true
+
The connector rejects messages that have values repeated too many or too few times.
+
* false
+
The connector uses the values and does not reject the messages. 

In either case, the error is reported in CONTRL functional acknowledgments. |  true |
| Enforce valid characters | Boolean a|  Enforce valid characters when using syntax levels UNOA and UNOB:

* true
+
The connector rejects received messages that contain characters that the syntax level does not allow.
+
* false
+
If a substitution character is set, the connector uses it in place of the disallowed characters. Otherwise, the connector passes the disallowed characters through. |  true |
| Allow unknown segments | Boolean a|  Allow unknown segments in a message:

* true 
+
The connector ignores the unknown segments and does not reject the messages.
+
* false
+
The connector rejects messages that contain unknown segments. 

In either case, the error is reported in CONTRL functional acknowledgments. |  false |
| Enforce segment order | Boolean a|  Enforce segment order in a message: 

* true
+
The connect rejects messages that have out-of-order segments.
+
* false
+
The connector does not reject messages if their out-of-order segments can be reordered. 

In either case, the error is reported in CONTRL functional acknowledgments. |  true |
| Allow unused segments | Boolean a|  Allow segments marked as `Unused` in the schema:

* true
+
The connector ignores unused segments and does not reject the messages.
+
* false
+
The connector rejects messages that contain segments marked as `Unused` in the schema. 
+

In either case, the error is reported in CONTRL functional acknowledgments. |  true |
| Enforce segment repeats | Boolean a|  Enforce segment repetition count limits in a message:

* true
+
The connector rejects messages that have a segment repeated too many times.
+ 
* false
+
The connector does not reject the messages.

In either case, the error is reported in CONTRL functional acknowledgments. |  true |
| Character encoding override | String |  Character encoding override for receive messages, which must be a Java character encoding name. Normally, character encoding is determined by the syntax identifier in the UNB header segment, but the connector uses this value instead, if it is set. |  |
| Require unique interchanges | Boolean a|  Reject an interchange if the Interchange Control Reference has previously been processed:

* true
+
Record the interchange numbers previously processed and reject any duplicate interchange numbers from the same partner, as determined by the interchange sender and receiver identification. 
+
* false
+
The application flow tracks the numbers and handles them appropriately. |  false |
| Require unique messages | Boolean a|  Enforce globally unique Message Reference Numbers (UNH.1) for received messages: 

* true
+
Message reference numbers must be unique across all interchanges received from the same partner and application, as determined by the interchange sender and recipient identification.  
+
* false
+
Message reference numbers must be unique within a particular interchange.
|  false |
| Store time-to-live | Number |  Minimum number of days to store interchange and message numbers in the default persistent object store. This value is used only when the configuration requires unique interchanges, message numbers, or both. It sets the entry time-to-live for these stored values. |  30 |
| Write character encoding a| Enumeration, one of:

* ASCII_A
* ASCII_B
* ISO8859_1
* ISO8859_2
* ISO8859_3
* ISO8859_4
* ISO8859_5
* ISO8859_6
* ISO8859_7
* ISO8859_8
* ISO8859_9
* UTF8 |  Character encoding used for writing messages. |  ASCII_B |
| Syntax version a| Enumeration, one of:

* VERSION2
* VERSION3
* VERSION4 |  Syntax version for send messages. This version determines the data structures used for service segments and CONTRL acknowledgment message structures in DataSense metadata for both send and receive messages. The actual message data for receive messages reflects the syntax version used in the received interchange. |  VERSION4 |
| Segment line ending a| Enumeration, one of:

* NONE
* LF
* CRLF
* CR |  Line ending to add between segments. This can improve the readability of the output message text. |  NONE |
| Always send UNA | Boolean a|  
* true
+
Always send a UNA service segment.
+
* false
+
Include a UNA in an interchange when the syntax separator characters don't match the defaults for the syntax version and character encoding in use. |  false |
| Enforce valid characters | Boolean a| Enforce valid characters when using syntax levels UNOA and UNOB. 

* true
+
The connector rejects received messages that contain characters not allowed by the syntax level.
+
* false
+
The connector either uses a substitution character if one is set, or passes the disallowed characters through. |  true |
| Unique message numbers | Boolean a|  Send unique Message Reference Numbers (UNH.1):

* true
+
Assigns unique transaction set numbers across all interchanges sent to the same partner, as determined by the interchange sender and recipient identification.
+
* false
+
Assigns message reference numbers sequentially within each interchange and reuses them in different interchanges. |  false |
| Initial interchange reference | String |  The initial Interchange Control Reference used for outgoing messages. |  1 |
| Initial message reference | String |  The initial Message Reference Number used for outgoing messages. |  1 |
| Request acknowledgments | Boolean a|  Requests acknowledgments for Send interchanges using the Acknowledgment Request field (UNB.9):

* true
+
Requests CONTRL acknowledgments in all sent interchanges.
+
* false
+
Requests receipt confirmations. |  false |
| Test indicator | String |  Test indicator digit to use on Send interchanges. By default, interchanges are not sent as tests. |  |
| Use Supplied Values | Boolean a| Whether to generate control numbers when writing or use supplied values for control-segment information such as control numbers:

* true
+
The connector uses the provided control-segment information. 
+
* false
+
The connector automatically generates control numbers when writing.| false |
| Interchange control number key | String |Key-value pair of the interchange control key and interchange control number.| NONE |
| Message control number key | String | Key-value pair of the message control key and message control number.| NONE |
| Truncate values exceeding the length limits | Boolean a| Whether to truncate values that exceed the length limits: 

* true
+
If the *Enforce length limits* field is also true, the connector trims values that exceed the maximum length.
+
* false
+
The connector writes the values as they are. | false |
|Enforce code set validations | Boolean a| Whether to enforce code set validations:

* true
+
The connector enforces code set validations, as defined in the EDIFACT schemas.
+
* false
+
The connector does not enforce code set validations.| false |
|Use Version Association Code | Boolean a| Whether to use UNH0205 (Version Association Code):

* true
+
The connector uses UNH0205 (Version Association Code).
+
* false
+
The connector does not use UNH0205 (Version Association Code)
| false |
|Use segment line ending in the last line | Boolean a| Whether to use segment line ending characters in the last line of the segment:

* true
+
The connector uses the configured *Segment line ending* value at the end of the last line in the segment.
+
* false
+
The connector does not use the configured *Segment line ending* value at the end of the last line in the segment.| false |
|===


== Operations

* <<read>>
* <<write>>
* <<write-batch>>

[[read]]
=== Read

`<edifact:read>`


Transforms an input stream of EDI text into maps and lists the structure of EDI data.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Read Content | Binary | Input payload. |  `#[payload]` |
| Target Variable | String |  Name of the variable that stores the operation's output. |  |
| Target Value | String |  Expression that evaluates the operation's output. The expression outcome is stored in the *Target Variable* field. |  `#[payload]` |
|===

==== Output

[cols="30a,70a"]
|===
| Type | Object
|===

==== For Configurations

* config

==== Throws

* EDIFACT:SCHEMA
* EDIFACT:WRITE
* EDIFACT:UNKNOWN
* EDIFACT:PARSE

[[write]]
=== Write

`<edifact:write>`

Transforms the maps and lists the structure of EDI data in the EDI text stream.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Write Content | Object | Input payload. |  `#[payload]` |
| Streaming Strategy a| Enumeration, one of:

* <<repeatable-file-store-stream>>
* <<repeatable-in-memory-stream>>
* Non repeatable stream |  Configures how Mule processes streams. | Repeatable file store stream |
| Target Variable | String |  Name of the variable that stores the operation's output. |  |
| Target Value | String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  `#[payload]` |
|===

==== Output

[cols="30a,70a"]
|===
| Type | Binary
|===

==== For Configurations

* config

==== Throws

* EDIFACT:SCHEMA
* EDIFACT:WRITE
* EDIFACT:UNKNOWN
* EDIFACT:PARSE

[[write-batch]]
=== Write batch

`<edifact:write-batch>`

Merges individual EDIFACT messages created and accumulated over a period of time into a single interchange (UNB).

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | |x
| Batch Content | Binary | Input payload. |  `#[payload]` |
| Target Variable | String |  Name of the variable that stores the operation's output. |  |
| Target Value | String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  `#[payload]` |
|===

==== Output

[cols="30a,70a"]
|===
| Type | Binary
|===

==== For Configurations

* config

==== Throws

* EDIFACT:SCHEMA
* EDIFACT:WRITE
* EDIFACT:UNKNOWN
* EDIFACT:PARSE


== Types
[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time | Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. | | 
| Time Unit a| Enumeration, one of:

* NANOSECONDS
* MICROSECONDS
* MILLISECONDS
* SECONDS
* MINUTES
* HOURS
* DAYS | A time unit that qualifies the *Max Idle Time* field. |  | 
|===

[[repeatable-in-memory-stream]]
=== Repeatable in memory stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size | Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of the *Max In Memory Size* value. |  |
| Buffer Size Increment | Number |  Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size | Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit.  |  |
| Buffer Unit a| Enumeration, one of:

* BYTE
* KB
* MB
* GB | The unit in which the fields in this table are expressed. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable file store stream

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size | Number a| Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance: 

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. 
{sp}+
{sp}+
This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.
* Configure a smaller buffer size to decrease memory load at the expense of response time.
 |  |
| Buffer Unit a| Enumeration, one of:

* BYTE
* KB
* MB
* GB | Unit for the *Max In Memory Size* field. |  |
|===

== See Also

* https://help.mulesoft.com[MuleSoft Help Center]
